rns-lang/tests/snapshots/err-parser-class_directive-header-name-dot_annotation_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public .annotation
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: cannot use directive '.annotation' as a class name
   ╭─[ test_data/integration/err/parser/class_directive/header/name/dot_annotation_as_class_name.ja:1:15 ]
   │
 1 │ .class public .annotation
   │               ─────┬─────  
   │                    ╰─────── directives cannot be used as names
   │ 
   │ Note: The .class directive requires a valid Java class name:
   │       .class [access_flags] <name>
───╯
